Scrollbar design fixed

--- a/client/src/Styles/Sidebar.module.css
+++ b/client/src/Styles/Sidebar.module.css
@@ -53,11 +53,13 @@
 
 @media screen and (max-width: 1000px) {
     .Sidebar {
+        /* display: relative; */
         width: 100%;
-        bottom: 0;
-        top: 180px;
+        height: 100vh;
+        top: 150px;
         left: -100%;
         border-right: none;
+        overflow: auto;
     }
 
     .sidebar-active {
