--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,15 @@
     --yellow: #ffbb26;
     --danger: #fc3434;
 }
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: var(--border);
+}
+::-webkit-scrollbar-thumb {
+    background: var(--dark-light);
+}
 a:not(.jodit-wysiwyg li) {
     text-decoration: none;
     color: var(--white);
